feat(api): gate combat modes and snapshots by platform capability
API, SDK, and addons expose only modes the loaded server can run, so
1.8–1.16.5 stubs can ship later without changing the public contracts.