@@ -14,8 +14,47 @@ import org.jspecify.annotations.Nullable;
  * @param yaw yaw rotation
  * @param pitch pitch rotation
  */
-public record BotLocationRequest(
-        @Nullable String worldName, @Nullable UUID worldUUID, double x, double y, double z, float yaw, float pitch) {
+public final class BotLocationRequest {
+    private final String worldName;
+    private final UUID worldUUID;
+    private final double x;
+    private final double y;
+    private final double z;
+    private final float yaw;
+    private final float pitch;
+
+    public BotLocationRequest(String worldName, UUID worldUUID, double x, double y, double z, float yaw, float pitch) {
+        this.worldName = worldName;
+        this.worldUUID = worldUUID;
+        this.x = x;
+        this.y = y;
+        this.z = z;
+        this.yaw = yaw;
+        this.pitch = pitch;
+    }
+
+    public String worldName() {
+        return worldName;
+    }
+    public UUID worldUUID() {
+        return worldUUID;
+    }
+    public double x() {
+        return x;
+    }
+    public double y() {
+        return y;
+    }
+    public double z() {
+        return z;
+    }
+    public float yaw() {
+        return yaw;
+    }
+    public float pitch() {
+        return pitch;
+    }
+
     /**
      * Creates a location request by world name.
      *
@@ -59,6 +98,28 @@ public record BotLocationRequest(
      * @return whether the location can resolve a world
      */
     public boolean hasWorldReference() {
-        return worldUUID != null || (worldName != null && !worldName.isBlank());
+        return worldUUID != null || (worldName != null && !worldName.trim().isEmpty());
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) {
+            return true;
+        }
+        if (!(obj instanceof BotLocationRequest)) {
+            return false;
+        }
+        BotLocationRequest other = (BotLocationRequest) obj;
+        return java.util.Objects.equals(worldName, other.worldName) && java.util.Objects.equals(worldUUID, other.worldUUID) && Double.compare(x, other.x) == 0 && Double.compare(y, other.y) == 0 && Double.compare(z, other.z) == 0 && Float.compare(yaw, other.yaw) == 0 && Float.compare(pitch, other.pitch) == 0;
+    }
+
+    @Override
+    public int hashCode() {
+        return java.util.Objects.hash(worldName, worldUUID, x, y, z, yaw, pitch);
+    }
+
+    @Override
+    public String toString() {
+        return "BotLocationRequest[worldName=" + worldName + ", worldUUID=" + worldUUID + ", x=" + x + ", y=" + y + ", z=" + z + ", yaw=" + yaw + ", pitch=" + pitch + "]";
     }
 }
