@@ -1,5 +1,7 @@
 package com.monkey.ultimatebot.sdk.model.request;
 
+
+import java.util.Collections;
 import com.monkey.ultimatebot.common.model.BlastProtectionSettings;
 import com.monkey.ultimatebot.common.model.BotArmorTier;
 import com.monkey.ultimatebot.common.model.BotMode;
@@ -68,61 +70,64 @@ import org.jspecify.annotations.Nullable;
  * @param brain optional custom brain; {@code null} uses the brain assigned to the mode
  * @param combatTuning optional tuning override for the selected mode and difficulty
  */
-public record BotSpawnRequest(
-        BotMode mode,
-        @Nullable UUID ownerUUID,
-        List<UUID> teamOwnerUUIDs,
-        @Nullable UUID botUUID,
-        List<UUID> targetUUIDs,
-        String botNameTemplate,
-        String botSkin,
-        boolean follow,
-        boolean changeableFollow,
-        boolean combat,
-        boolean changeableCombat,
-        boolean changeableBlast,
-        BlastProtectionSettings blastProtection,
-        boolean changeableArmor,
-        boolean changeableTotem,
-        boolean changeableDifficulty,
-        boolean changeableCombatMode,
-        BotArmorTier armor,
-        BotArmorTier minArmor,
-        BotArmorTier maxArmor,
-        int totemCount,
-        int minTotemCount,
-        int maxTotemCount,
-        DifficultyTier difficulty,
-        DifficultyTier minDifficulty,
-        DifficultyTier maxDifficulty,
-        @Nullable BotLocationRequest spawnLocation,
-        boolean autoTarget,
-        double autoTargetRange,
-        boolean attackBots,
-        BotTargetMode targetMode,
-        boolean respectWorldGuardPvp,
-        boolean stayAfterOwnerDeath,
-        boolean idleWander,
-        double idleWanderRadius,
-        double idleReturnDistance,
-        long idleReturnDelayMs,
-        boolean crystalPvp,
-        boolean explosions,
-        boolean explosionBlockDamage,
-        boolean enderPearls,
-        boolean healing,
-        boolean killMessageEnabled,
-        @Nullable String killMessage,
-        Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots,
-        CombatMode combatMode,
-        @Nullable BrainKey brain,
-        @Nullable CombatTuning combatTuning) {
-    public BotSpawnRequest {
+public final class BotSpawnRequest {
+    private final BotMode mode;
+    private final UUID ownerUUID;
+    private final List<UUID> teamOwnerUUIDs;
+    private final UUID botUUID;
+    private final List<UUID> targetUUIDs;
+    private final String botNameTemplate;
+    private final String botSkin;
+    private final boolean follow;
+    private final boolean changeableFollow;
+    private final boolean combat;
+    private final boolean changeableCombat;
+    private final boolean changeableBlast;
+    private final BlastProtectionSettings blastProtection;
+    private final boolean changeableArmor;
+    private final boolean changeableTotem;
+    private final boolean changeableDifficulty;
+    private final boolean changeableCombatMode;
+    private final BotArmorTier armor;
+    private final BotArmorTier minArmor;
+    private final BotArmorTier maxArmor;
+    private final int totemCount;
+    private final int minTotemCount;
+    private final int maxTotemCount;
+    private final DifficultyTier difficulty;
+    private final DifficultyTier minDifficulty;
+    private final DifficultyTier maxDifficulty;
+    private final BotLocationRequest spawnLocation;
+    private final boolean autoTarget;
+    private final double autoTargetRange;
+    private final boolean attackBots;
+    private final BotTargetMode targetMode;
+    private final boolean respectWorldGuardPvp;
+    private final boolean stayAfterOwnerDeath;
+    private final boolean idleWander;
+    private final double idleWanderRadius;
+    private final double idleReturnDistance;
+    private final long idleReturnDelayMs;
+    private final boolean crystalPvp;
+    private final boolean explosions;
+    private final boolean explosionBlockDamage;
+    private final boolean enderPearls;
+    private final boolean healing;
+    private final boolean killMessageEnabled;
+    private final String killMessage;
+    private final Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots;
+    private final CombatMode combatMode;
+    private final BrainKey brain;
+    private final CombatTuning combatTuning;
+
+    public BotSpawnRequest(BotMode mode, UUID ownerUUID, List<UUID> teamOwnerUUIDs, UUID botUUID, List<UUID> targetUUIDs, String botNameTemplate, String botSkin, boolean follow, boolean changeableFollow, boolean combat, boolean changeableCombat, boolean changeableBlast, BlastProtectionSettings blastProtection, boolean changeableArmor, boolean changeableTotem, boolean changeableDifficulty, boolean changeableCombatMode, BotArmorTier armor, BotArmorTier minArmor, BotArmorTier maxArmor, int totemCount, int minTotemCount, int maxTotemCount, DifficultyTier difficulty, DifficultyTier minDifficulty, DifficultyTier maxDifficulty, BotLocationRequest spawnLocation, boolean autoTarget, double autoTargetRange, boolean attackBots, BotTargetMode targetMode, boolean respectWorldGuardPvp, boolean stayAfterOwnerDeath, boolean idleWander, double idleWanderRadius, double idleReturnDistance, long idleReturnDelayMs, boolean crystalPvp, boolean explosions, boolean explosionBlockDamage, boolean enderPearls, boolean healing, boolean killMessageEnabled, String killMessage, Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots, CombatMode combatMode, BrainKey brain, CombatTuning combatTuning) {
+
+
         Objects.requireNonNull(mode, "mode");
         Objects.requireNonNull(blastProtection, "blastProtection");
-        teamOwnerUUIDs = teamOwnerUUIDs == null ? List.of() : List.copyOf(teamOwnerUUIDs);
-        targetUUIDs = targetUUIDs == null ? List.of() : List.copyOf(targetUUIDs);
-        equipmentSlots = equipmentSlots == null ? Map.of() : Map.copyOf(equipmentSlots);
+        teamOwnerUUIDs = teamOwnerUUIDs == null ? Collections.emptyList() : com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(teamOwnerUUIDs);
+        targetUUIDs = targetUUIDs == null ? Collections.emptyList() : com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(targetUUIDs);
+        equipmentSlots = equipmentSlots == null ? Collections.emptyMap() : com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(equipmentSlots);
         Objects.requireNonNull(botNameTemplate, "botNameTemplate");
         Objects.requireNonNull(botSkin, "botSkin");
         Objects.requireNonNull(armor, "armor");
@@ -145,7 +150,7 @@ public record BotSpawnRequest(
         if (mode != BotMode.TEAM_ALLY && !teamOwnerUUIDs.isEmpty()) {
             throw new IllegalArgumentException("teamOwnerUUIDs are valid only for TEAM_ALLY mode");
         }
-        if (botNameTemplate.isBlank()) {
+        if (botNameTemplate.trim().isEmpty()) {
             throw new IllegalArgumentException("botNameTemplate cannot be blank");
         }
         if (minArmor.compareTo(maxArmor) > 0 || armor.compareTo(minArmor) < 0 || armor.compareTo(maxArmor) > 0) {
@@ -180,6 +185,199 @@ public record BotSpawnRequest(
         if (idleReturnDelayMs < 0L) {
             throw new IllegalArgumentException("idleReturnDelayMs cannot be negative");
         }
+        this.mode = mode;
+        this.ownerUUID = ownerUUID;
+        this.teamOwnerUUIDs = teamOwnerUUIDs;
+        this.botUUID = botUUID;
+        this.targetUUIDs = targetUUIDs;
+        this.botNameTemplate = botNameTemplate;
+        this.botSkin = botSkin;
+        this.follow = follow;
+        this.changeableFollow = changeableFollow;
+        this.combat = combat;
+        this.changeableCombat = changeableCombat;
+        this.changeableBlast = changeableBlast;
+        this.blastProtection = blastProtection;
+        this.changeableArmor = changeableArmor;
+        this.changeableTotem = changeableTotem;
+        this.changeableDifficulty = changeableDifficulty;
+        this.changeableCombatMode = changeableCombatMode;
+        this.armor = armor;
+        this.minArmor = minArmor;
+        this.maxArmor = maxArmor;
+        this.totemCount = totemCount;
+        this.minTotemCount = minTotemCount;
+        this.maxTotemCount = maxTotemCount;
+        this.difficulty = difficulty;
+        this.minDifficulty = minDifficulty;
+        this.maxDifficulty = maxDifficulty;
+        this.spawnLocation = spawnLocation;
+        this.autoTarget = autoTarget;
+        this.autoTargetRange = autoTargetRange;
+        this.attackBots = attackBots;
+        this.targetMode = targetMode;
+        this.respectWorldGuardPvp = respectWorldGuardPvp;
+        this.stayAfterOwnerDeath = stayAfterOwnerDeath;
+        this.idleWander = idleWander;
+        this.idleWanderRadius = idleWanderRadius;
+        this.idleReturnDistance = idleReturnDistance;
+        this.idleReturnDelayMs = idleReturnDelayMs;
+        this.crystalPvp = crystalPvp;
+        this.explosions = explosions;
+        this.explosionBlockDamage = explosionBlockDamage;
+        this.enderPearls = enderPearls;
+        this.healing = healing;
+        this.killMessageEnabled = killMessageEnabled;
+        this.killMessage = killMessage;
+        this.equipmentSlots = equipmentSlots;
+        this.combatMode = combatMode;
+        this.brain = brain;
+        this.combatTuning = combatTuning;
+    }
+
+    public BotMode mode() {
+        return mode;
+    }
+    public UUID ownerUUID() {
+        return ownerUUID;
+    }
+    public List<UUID> teamOwnerUUIDs() {
+        return teamOwnerUUIDs;
+    }
+    public UUID botUUID() {
+        return botUUID;
+    }
+    public List<UUID> targetUUIDs() {
+        return targetUUIDs;
+    }
+    public String botNameTemplate() {
+        return botNameTemplate;
+    }
+    public String botSkin() {
+        return botSkin;
+    }
+    public boolean follow() {
+        return follow;
+    }
+    public boolean changeableFollow() {
+        return changeableFollow;
+    }
+    public boolean combat() {
+        return combat;
+    }
+    public boolean changeableCombat() {
+        return changeableCombat;
+    }
+    public boolean changeableBlast() {
+        return changeableBlast;
+    }
+    public BlastProtectionSettings blastProtection() {
+        return blastProtection;
+    }
+    public boolean changeableArmor() {
+        return changeableArmor;
+    }
+    public boolean changeableTotem() {
+        return changeableTotem;
+    }
+    public boolean changeableDifficulty() {
+        return changeableDifficulty;
+    }
+    public boolean changeableCombatMode() {
+        return changeableCombatMode;
+    }
+    public BotArmorTier armor() {
+        return armor;
+    }
+    public BotArmorTier minArmor() {
+        return minArmor;
+    }
+    public BotArmorTier maxArmor() {
+        return maxArmor;
+    }
+    public int totemCount() {
+        return totemCount;
+    }
+    public int minTotemCount() {
+        return minTotemCount;
+    }
+    public int maxTotemCount() {
+        return maxTotemCount;
+    }
+    public DifficultyTier difficulty() {
+        return difficulty;
+    }
+    public DifficultyTier minDifficulty() {
+        return minDifficulty;
+    }
+    public DifficultyTier maxDifficulty() {
+        return maxDifficulty;
+    }
+    public BotLocationRequest spawnLocation() {
+        return spawnLocation;
+    }
+    public boolean autoTarget() {
+        return autoTarget;
+    }
+    public double autoTargetRange() {
+        return autoTargetRange;
+    }
+    public boolean attackBots() {
+        return attackBots;
+    }
+    public BotTargetMode targetMode() {
+        return targetMode;
+    }
+    public boolean respectWorldGuardPvp() {
+        return respectWorldGuardPvp;
+    }
+    public boolean stayAfterOwnerDeath() {
+        return stayAfterOwnerDeath;
+    }
+    public boolean idleWander() {
+        return idleWander;
+    }
+    public double idleWanderRadius() {
+        return idleWanderRadius;
+    }
+    public double idleReturnDistance() {
+        return idleReturnDistance;
+    }
+    public long idleReturnDelayMs() {
+        return idleReturnDelayMs;
+    }
+    public boolean crystalPvp() {
+        return crystalPvp;
+    }
+    public boolean explosions() {
+        return explosions;
+    }
+    public boolean explosionBlockDamage() {
+        return explosionBlockDamage;
+    }
+    public boolean enderPearls() {
+        return enderPearls;
+    }
+    public boolean healing() {
+        return healing;
+    }
+    public boolean killMessageEnabled() {
+        return killMessageEnabled;
+    }
+    public String killMessage() {
+        return killMessage;
+    }
+    public Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots() {
+        return equipmentSlots;
+    }
+    public CombatMode combatMode() {
+        return combatMode;
+    }
+    public BrainKey brain() {
+        return brain;
+    }
+    public CombatTuning combatTuning() {
+        return combatTuning;
     }
 
     public static Builder builder() {
@@ -208,9 +406,9 @@ public record BotSpawnRequest(
     public static final class Builder {
         private BotMode mode = BotMode.EVENT;
         private @Nullable UUID ownerUUID;
-        private List<UUID> teamOwnerUUIDs = List.of();
+        private List<UUID> teamOwnerUUIDs = Collections.emptyList();
         private @Nullable UUID botUUID;
-        private List<UUID> targetUUIDs = List.of();
+        private List<UUID> targetUUIDs = Collections.emptyList();
         private String botNameTemplate = "UltimateBot";
         private String botSkin = "RANDOM";
         private boolean follow = true;
@@ -250,7 +448,7 @@ public record BotSpawnRequest(
         private boolean healing = true;
         private boolean killMessageEnabled = true;
         private @Nullable String killMessage;
-        private Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots = Map.of();
+        private Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots = Collections.emptyMap();
         private CombatMode combatMode = CombatMode.SWORD;
         private @Nullable BrainKey brain;
         private @Nullable CombatTuning combatTuning;
@@ -268,7 +466,7 @@ public record BotSpawnRequest(
         }
 
         public Builder teamOwnerUUIDs(@Nullable List<UUID> teamOwnerUUIDs) {
-            this.teamOwnerUUIDs = teamOwnerUUIDs == null ? List.of() : List.copyOf(teamOwnerUUIDs);
+            this.teamOwnerUUIDs = teamOwnerUUIDs == null ? Collections.emptyList() : com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(teamOwnerUUIDs);
             return this;
         }
 
@@ -279,7 +477,7 @@ public record BotSpawnRequest(
         }
 
         public Builder targetUUIDs(@Nullable List<UUID> targetUUIDs) {
-            this.targetUUIDs = targetUUIDs == null ? List.of() : List.copyOf(targetUUIDs);
+            this.targetUUIDs = targetUUIDs == null ? Collections.emptyList() : com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(targetUUIDs);
             return this;
         }
 
@@ -493,7 +691,7 @@ public record BotSpawnRequest(
         }
 
         public Builder equipmentSlots(@Nullable Map<SdkBotEquipmentSlot, BotEquipmentSlotRequest> equipmentSlots) {
-            this.equipmentSlots = equipmentSlots == null ? Map.of() : Map.copyOf(equipmentSlots);
+            this.equipmentSlots = equipmentSlots == null ? Collections.emptyMap() : com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(equipmentSlots);
             return this;
         }
 
@@ -507,7 +705,7 @@ public record BotSpawnRequest(
             } else {
                 updated.put(Objects.requireNonNull(slot, "slot"), requiredSetting);
             }
-            this.equipmentSlots = Map.copyOf(updated);
+            this.equipmentSlots = com.monkey.ultimatebot.common.util.ImmutableCollections.copyOf(updated);
             return this;
         }
 
@@ -593,5 +791,27 @@ public record BotSpawnRequest(
                     brain,
                     combatTuning);
         }
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) {
+            return true;
+        }
+        if (!(obj instanceof BotSpawnRequest)) {
+            return false;
+        }
+        BotSpawnRequest other = (BotSpawnRequest) obj;
+        return java.util.Objects.equals(mode, other.mode) && java.util.Objects.equals(ownerUUID, other.ownerUUID) && java.util.Objects.equals(teamOwnerUUIDs, other.teamOwnerUUIDs) && java.util.Objects.equals(botUUID, other.botUUID) && java.util.Objects.equals(targetUUIDs, other.targetUUIDs) && java.util.Objects.equals(botNameTemplate, other.botNameTemplate) && java.util.Objects.equals(botSkin, other.botSkin) && follow == other.follow && changeableFollow == other.changeableFollow && combat == other.combat && changeableCombat == other.changeableCombat && changeableBlast == other.changeableBlast && java.util.Objects.equals(blastProtection, other.blastProtection) && changeableArmor == other.changeableArmor && changeableTotem == other.changeableTotem && changeableDifficulty == other.changeableDifficulty && changeableCombatMode == other.changeableCombatMode && java.util.Objects.equals(armor, other.armor) && java.util.Objects.equals(minArmor, other.minArmor) && java.util.Objects.equals(maxArmor, other.maxArmor) && totemCount == other.totemCount && minTotemCount == other.minTotemCount && maxTotemCount == other.maxTotemCount && java.util.Objects.equals(difficulty, other.difficulty) && java.util.Objects.equals(minDifficulty, other.minDifficulty) && java.util.Objects.equals(maxDifficulty, other.maxDifficulty) && java.util.Objects.equals(spawnLocation, other.spawnLocation) && autoTarget == other.autoTarget && Double.compare(autoTargetRange, other.autoTargetRange) == 0 && attackBots == other.attackBots && java.util.Objects.equals(targetMode, other.targetMode) && respectWorldGuardPvp == other.respectWorldGuardPvp && stayAfterOwnerDeath == other.stayAfterOwnerDeath && idleWander == other.idleWander && Double.compare(idleWanderRadius, other.idleWanderRadius) == 0 && Double.compare(idleReturnDistance, other.idleReturnDistance) == 0 && idleReturnDelayMs == other.idleReturnDelayMs && crystalPvp == other.crystalPvp && explosions == other.explosions && explosionBlockDamage == other.explosionBlockDamage && enderPearls == other.enderPearls && healing == other.healing && killMessageEnabled == other.killMessageEnabled && java.util.Objects.equals(killMessage, other.killMessage) && java.util.Objects.equals(equipmentSlots, other.equipmentSlots) && java.util.Objects.equals(combatMode, other.combatMode) && java.util.Objects.equals(brain, other.brain) && java.util.Objects.equals(combatTuning, other.combatTuning);
+    }
+
+    @Override
+    public int hashCode() {
+        return java.util.Objects.hash(mode, ownerUUID, teamOwnerUUIDs, botUUID, targetUUIDs, botNameTemplate, botSkin, follow, changeableFollow, combat, changeableCombat, changeableBlast, blastProtection, changeableArmor, changeableTotem, changeableDifficulty, changeableCombatMode, armor, minArmor, maxArmor, totemCount, minTotemCount, maxTotemCount, difficulty, minDifficulty, maxDifficulty, spawnLocation, autoTarget, autoTargetRange, attackBots, targetMode, respectWorldGuardPvp, stayAfterOwnerDeath, idleWander, idleWanderRadius, idleReturnDistance, idleReturnDelayMs, crystalPvp, explosions, explosionBlockDamage, enderPearls, healing, killMessageEnabled, killMessage, equipmentSlots, combatMode, brain, combatTuning);
+    }
+
+    @Override
+    public String toString() {
+        return "BotSpawnRequest[mode=" + mode + ", ownerUUID=" + ownerUUID + ", teamOwnerUUIDs=" + teamOwnerUUIDs + ", botUUID=" + botUUID + ", targetUUIDs=" + targetUUIDs + ", botNameTemplate=" + botNameTemplate + ", botSkin=" + botSkin + ", follow=" + follow + ", changeableFollow=" + changeableFollow + ", combat=" + combat + ", changeableCombat=" + changeableCombat + ", changeableBlast=" + changeableBlast + ", blastProtection=" + blastProtection + ", changeableArmor=" + changeableArmor + ", changeableTotem=" + changeableTotem + ", changeableDifficulty=" + changeableDifficulty + ", changeableCombatMode=" + changeableCombatMode + ", armor=" + armor + ", minArmor=" + minArmor + ", maxArmor=" + maxArmor + ", totemCount=" + totemCount + ", minTotemCount=" + minTotemCount + ", maxTotemCount=" + maxTotemCount + ", difficulty=" + difficulty + ", minDifficulty=" + minDifficulty + ", maxDifficulty=" + maxDifficulty + ", spawnLocation=" + spawnLocation + ", autoTarget=" + autoTarget + ", autoTargetRange=" + autoTargetRange + ", attackBots=" + attackBots + ", targetMode=" + targetMode + ", respectWorldGuardPvp=" + respectWorldGuardPvp + ", stayAfterOwnerDeath=" + stayAfterOwnerDeath + ", idleWander=" + idleWander + ", idleWanderRadius=" + idleWanderRadius + ", idleReturnDistance=" + idleReturnDistance + ", idleReturnDelayMs=" + idleReturnDelayMs + ", crystalPvp=" + crystalPvp + ", explosions=" + explosions + ", explosionBlockDamage=" + explosionBlockDamage + ", enderPearls=" + enderPearls + ", healing=" + healing + ", killMessageEnabled=" + killMessageEnabled + ", killMessage=" + killMessage + ", equipmentSlots=" + equipmentSlots + ", combatMode=" + combatMode + ", brain=" + brain + ", combatTuning=" + combatTuning + "]";
     }
 }
