@@ -10,11 +10,32 @@ import org.jspecify.annotations.Nullable;
  * @param snapshot latest bot state when the operation targets a single bot
  * @param removedCount number of removed bots for bulk deletion operations
  */
-public record BotOperationResponse(
-        boolean success,
-        @Nullable String message,
-        @Nullable BotSnapshotResponse snapshot,
-        @Nullable Integer removedCount) {
+public final class BotOperationResponse {
+    private final boolean success;
+    private final String message;
+    private final BotSnapshotResponse snapshot;
+    private final Integer removedCount;
+
+    public BotOperationResponse(boolean success, String message, BotSnapshotResponse snapshot, Integer removedCount) {
+        this.success = success;
+        this.message = message;
+        this.snapshot = snapshot;
+        this.removedCount = removedCount;
+    }
+
+    public boolean success() {
+        return success;
+    }
+    public String message() {
+        return message;
+    }
+    public BotSnapshotResponse snapshot() {
+        return snapshot;
+    }
+    public Integer removedCount() {
+        return removedCount;
+    }
+
     /**
      * Returns {@code true} when the response contains a bot snapshot.
      *
@@ -41,8 +62,30 @@ public record BotOperationResponse(
     public BotOperationResponse requireSuccess() {
         if (!success) {
             throw new IllegalStateException(
-                    message == null || message.isBlank() ? "Remote API operation failed" : message);
+                    message == null || message.trim().isEmpty() ? "Remote API operation failed" : message);
         }
         return this;
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) {
+            return true;
+        }
+        if (!(obj instanceof BotOperationResponse)) {
+            return false;
+        }
+        BotOperationResponse other = (BotOperationResponse) obj;
+        return success == other.success && java.util.Objects.equals(message, other.message) && java.util.Objects.equals(snapshot, other.snapshot) && java.util.Objects.equals(removedCount, other.removedCount);
+    }
+
+    @Override
+    public int hashCode() {
+        return java.util.Objects.hash(success, message, snapshot, removedCount);
+    }
+
+    @Override
+    public String toString() {
+        return "BotOperationResponse[success=" + success + ", message=" + message + ", snapshot=" + snapshot + ", removedCount=" + removedCount + "]";
     }
 }
